<resources>
    <string name="app_name">IP Calculator</string>
    <string name="app_version">Version 1.4</string>

    <!-- Header -->
    <string name="text_ip">IP:\u0020</string>
    <string name="hint_ip_state_one">192.168.210.171</string>
    <string name="hint_ip_state_two">192.168.0.0</string>
    <string name="switch_network_ip_address">Network IP</string>
    <string name="text_mask">Mask:\u0020</string>
    <string name="text_id">ID:\u0020</string>
    <string name="hint_id">Enter the id</string>
    <string name="button_calculate">Calculate</string>

    <!-- Spinner array -->
    <string-array name="spinner_mask">
        <item>/32 – 255.255.255.255</item>
        <item>/31 – 255.255.255.254</item>
        <item>/30 – 255.255.255.252</item>
        <item>/29 – 255.255.255.248</item>
        <item>/28 – 255.255.255.240</item>
        <item>/27 – 255.255.255.224</item>
        <item>/26 – 255.255.255.192</item>
        <item>/25 – 255.255.255.128</item>
        <item>/24 – 255.255.255.0</item>
        <item>/23 – 255.255.254.0</item>
        <item>/22 – 255.255.252.0</item>
        <item>/21 – 255.255.248.0</item>
        <item>/20 – 255.255.240.0</item>
        <item>/19 – 255.255.224.0</item>
        <item>/18 – 255.255.192.0</item>
        <item>/17 – 255.255.128.0</item>
        <item>/16 – 255.255.0.0</item>
        <item>/15 – 255.254.0.0</item>
        <item>/14 – 255.252.0.0</item>
        <item>/13 – 255.248.0.0</item>
        <item>/12 – 255.240.0.0</item>
        <item>/11 – 255.224.0.0</item>
        <item>/10 – 255.192.0.0</item>
        <item>/9 – 255.128.0.0</item>
        <item>/8 – 255.0.0.0</item>
        <item>/7 – 254.0.0.0</item>
        <item>/6 – 252.0.0.0</item>
        <item>/5 – 248.0.0.0</item>
        <item>/4 – 240.0.0.0</item>
        <item>/3 – 224.0.0.0</item>
        <item>/2 – 192.0.0.0</item>
        <item>/1 – 128.0.0.0</item>
        <item>/0 – 0.0.0.0</item>
    </string-array>

    <!-- Body -->
    <string name="text_network_class">IP class:\u0020</string>
    <string name="text_network_ip_address">Network IP:\u0020</string>
    <string name="text_subnet_node">Number of nodes:\u0020</string>
    <string name="text_subnet">Number of subnet:\u0020</string>
    <string name="text_first_ip_address">First IP:\u0020</string>
    <string name="text_last_ip_address">Last IP:\u0020</string>
    <string name="text_broadcast_address">Broadcast IP:\u0020</string>

    <!-- Container for decimal values -->
    <string name="dec_title_text">Decimal</string>

    <!-- Container for binary values -->
    <string name="bin_title_text">Binary</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- About dialog -->
    <string name="about_title">About</string>
    <string name="about_email">Email: svyatradke@gmail.com</string>
    <string name="about_telegram">Telegram: t.me/androvert</string>
    <string name="about_footer_text">© Svyatoslav Radke, 2021\nAll rights reserved</string>
    <string name="about_close">Close</string>

    <!-- MainActivity -->
    <string name="error">An unexpected error occurred!</string>

</resources>