<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:background="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        
        <TextView
            android:id="@+id/textIP"
            android:theme="@style/HeaderTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/text_ip"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <EditText
            android:id="@+id/editTextIp"
            android:theme="@style/HeaderTextViewStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/hint_ip_state_one"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <Switch
            android:id="@+id/switchNetworkIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/switch_network_ip_address"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textIP"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        
        <TextView
            android:id="@+id/textMask"
            android:theme="@style/HeaderTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/text_mask"
            app:layout_constraintTop_toBottomOf="@id/switchNetworkIp"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <Spinner
            android:id="@+id/spinnerMask"
            android:theme="@style/HeaderSpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:entries="@array/spinner_mask"
            app:layout_constraintTop_toBottomOf="@id/switchNetworkIp"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/textId"
            android:theme="@style/HeaderTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/text_id"
            app:layout_constraintTop_toBottomOf="@id/textMask"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <EditText
            android:id="@+id/editTextId"
            android:theme="@style/HeaderTextViewStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/hint_id"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/textMask"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_calculate"
            android:textAllCaps="false"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <!-- Body -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- First container -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:theme="@style/BodyContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="210dp">

                <!-- Title -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textDecTitle"
                    android:theme="@style/BodyContainerHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/decTitleText"
                        android:theme="@style/BodyContainerTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/dec_title_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Body Container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/textDecTitle">

                    <TextView
                        android:id="@+id/textDecNetworkClass"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_network_class"/>

                    <TextView
                        android:id="@+id/textDecNetworkIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_network_ip_address"/>

                    <TextView
                        android:id="@+id/textDecSubnetNode"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_subnet_node"/>

                    <TextView
                        android:id="@+id/textDecSubnet"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_subnet"/>

                    <TextView
                        android:id="@+id/textDecFirstIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_first_ip_address"/>

                    <TextView
                        android:id="@+id/textDecLastIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_last_ip_address"/>

                    <TextView
                        android:id="@+id/textDecBroadcastAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_broadcast_address"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Second container -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:theme="@style/BodyContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginTop="20dp">

                <!-- Title -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textBinTitle"
                    android:theme="@style/BodyContainerHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/binTitleText"
                        android:theme="@style/BodyContainerTitleTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/dec_title_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Body Container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/textBinTitle">

                    <TextView
                        android:id="@+id/textBinNetworkClass"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_network_class"/>

                    <TextView
                        android:id="@+id/textBinNetworkIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_network_ip_address"/>

                    <TextView
                        android:id="@+id/textBinSubnetNode"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_subnet_node"/>

                    <TextView
                        android:id="@+id/textBinSubnet"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_subnet"/>

                    <TextView
                        android:id="@+id/textBinFirstIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_first_ip_address"/>

                    <TextView
                        android:id="@+id/textBinLastIpAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_last_ip_address"/>

                    <TextView
                        android:id="@+id/textBinBroadcastAddress"
                        android:theme="@style/BodyContainerTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_broadcast_address"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
        
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>